--- a/public/content/app.css
+++ b/public/content/app.css
@@ -1,3 +1,17 @@
 body {
-    padding: 10px;
+    text-align: center;
+    background-color: #DFDFDE;
+}
+.mainTxtContainer {
+    width: 400px;
+    height: 400px;
+    margin: 100px auto;
+    position: relative;
+}
+
+.mainTxtContainer p {
+    margin: 0;
+    padding: 0;
+    text-align: left;
+    font-family: arial;
 }
