--- a/app/views/content/home.ejs
+++ b/app/views/content/home.ejs
@@ -4,20 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./content/home.css">
     <title>Document</title>
 </head>
 <body>
     <h1><%- title %></h1>
     <h2>Projects</h2>
-    <div class="mainTxtContainer">
+    <div class="customLogo">
+        <img src="Multimedia/photos/NavbarLogo.png">
+    </div>
+    <div class="container">
         <p>
             Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
             Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
             when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
-            It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. 
-            It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently 
-            with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
         </p>
+    <div class="Navbuttons">
+        <a href="/about"><button>About Me</button></a>
     </div>
 </body>
 </html>
