--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -14,6 +14,7 @@
 <body>
     <!--header-->
     <%- include('partials/header.ejs') %>
+    <%- include('partials/content.ejs') %>
     <!--main content-->
     <%- include('content/' + page + '.ejs') %>
     <!--footer-->
