--- a/app/views/partials/footer.ejs
+++ b/app/views/partials/footer.ejs
@@ -1,3 +1,3 @@
 <nav class="navbar navbar-expand-lg fixed-bottom navbar-dark bg-dark">
-    <h5 style="color: white;">&copy;Copyright Shawn Perron - 2023</h5>
+    <h5 style="color: #DFDFDE;">&copy;Copyright Shawn Perron - 2023</h5>
   </nav>
