Express Portfolio COMP 229 02/04/2023

--- a/app/views/content/about.ejs
+++ b/app/views/content/about.ejs
@@ -4,10 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./content/about.css">
     <title>Document</title>
 </head>
 <body>
     <h1><%- title %></h1>
-    
+    <div class="myPhoto">
+        <img src="Multimedia/photos/photoMe.jpg">
+    </div>
+    <div class="container">
+        <p>
+            Greetings! My name is Shawn Perron, and I'm an avid learner interested in exploring new ideas and projects -
+            whether simple in nature or complex. I pride myself on delivering high-quality work and am eager to work
+            independently and with others to achieve the desired results. Be welcome and explore my page!
+        </p>
 </body>
 </html>
