--- a/app/views/content/home.ejs
+++ b/app/views/content/home.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,20 +8,21 @@
     <link rel="stylesheet" href="./content/home.css">
     <title>Document</title>
 </head>
+
 <body>
     <h1><%- title %></h1>
-    <h2>Projects</h2>
     <div class="customLogo">
         <img src="Multimedia/photos/NavbarLogo.png">
     </div>
     <div class="container">
         <p>
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
-            when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
+            Greetings! My name is Shawn Perron, and I'm an avid learner interested in exploring new ideas and projects -
+            whether simple in nature or complex. I pride myself on delivering high-quality work and am eager to work
+            independently and with others to achieve the desired results. Be welcome and explore my page!
         </p>
-    <div class="Navbuttons">
-        <a href="/about"><button>About Me</button></a>
-    </div>
+        <div class="Navbuttons">
+            <a href="/about"><button>About Me</button></a>
+        </div>
 </body>
+
 </html>
