--- a/app/views/content/projects.ejs
+++ b/app/views/content/projects.ejs
@@ -11,6 +11,35 @@
 
 <body>
     <h1><%- title %></h1>
+    <div class="row">
+        <div class="column">
+            <h2>E-Commerce Database</h2>
+            <img class="img1" src="Multimedia/photos/databaseImage.jpg" height="200px" width="300px">
+            <div class="columnText">
+                <p> As a final project for my Advanced Database Concepts course, I helped create a database for an
+                    e-commerce solution. My role was to design the database schema. I also created PL/SQL sequences,
+                    indexes, triggers, and other operations to facilitate standard business logic procedures. </p>
+            </div>
+        </div>
+        <div class="column">
+            <h2>Programming</h2>
+            <img class="img2" src="Multimedia/photos/coding.jpg" height="200px" width="300px">
+            <div class="columnText">
+                <p>I'm currently learning several programming languages, including Java, C, C#, PL/SQL, and JavaScript.
+                    I'm always eager to increase my knowledge of programming concepts and methodologies. </p>
+            </div>
+        </div>
+        <div class="column">
+            <h2>Analysis and Design</h2>
+            <img class="img3" src="Multimedia/photos/modeling_techniques.png" height="200px" width="300px">
+            <div class="columnText">
+                <p>As a group member, I created a Software Requirements Specification for a tourist application. The
+                    project centered on object-oriented software engineering. I consolidated and furthered my knowledge
+                    of Unified Modeling Language and collaborated successfully with others to achieve the project goals.
+                </p>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
