--- a/app/views/content/services.ejs
+++ b/app/views/content/services.ejs
@@ -4,10 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./content/services.css">
     <title>Document</title>
 </head>
 <body>
     <h1><%- title %></h1>
-    
+    <div class="customLogo">
+        <img src="Multimedia/photos/NavbarLogo.png">
+    </div>
+    <div class="services">
+        <h2>Offered Services</h2>
+        <ul class="unorderedList">
+          <li>General Programming:</li>
+        </ul>
+      </div>
 </body>
 </html>
