Portfolio update -- hosting services test

--- a/app/views/content/about.ejs
+++ b/app/views/content/about.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="./content/about.css">
     <title>Document</title>
 </head>
+
 <body>
     <h1><%- title %></h1>
     <div class="myPhoto">
@@ -14,9 +16,9 @@
     </div>
     <div class="container">
         <p>
-            Greetings! My name is Shawn Perron, and I'm an avid learner interested in exploring new ideas and projects -
-            whether simple in nature or complex. I pride myself on delivering high-quality work and am eager to work
-            independently and with others to achieve the desired results. Be welcome and explore my page!
+            I'm currently a student in the Software Engineering Technology program at Centennial College. I'm a hopeless
+            dilettante interested in music, philosophy, science, and history, and why not? Information Technology.
         </p>
 </body>
+
 </html>
