COMP 229 Express Portfolio Assignment 1 *FINAL*  Deliverable

--- a/app/views/content/contact.ejs
+++ b/app/views/content/contact.ejs
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./content/contact.css">
-    <title>Document</title>
+    <title>Contact Page</title>
 </head>
 <body>
     <h1><%- title %></h1>
@@ -16,6 +15,7 @@
                 <h3>Your Message</h3>
                 <div class="column">
                     <div class="returnAddress">
+                            <!--Currently, the contact form has no functionality, but I will add this in a future deliverable as required -->
                         <form>
                             <label for="fname">Name</label>
                             <input type="text" id="name" name="Name" placeholder="Your name...">
