--- a/app/views/content/projects.ejs
+++ b/app/views/content/projects.ejs
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./content/projects.css">
-    <title>Document</title>
+    <title>Projects Page</title>
 </head>
 
 <body>
@@ -33,8 +33,8 @@
             <h2>Analysis and Design</h2>
             <img class="img3" src="Multimedia/photos/modeling_techniques.png" height="200px" width="300px">
             <div class="columnText">
-                <p>As a group member, I created a Software Requirements Specification for a tourist application. The
-                    project centered on object-oriented software engineering. I consolidated and furthered my knowledge
+                <p>I created a Software Requirements Specification for a tourist application. The
+                    project centered on object-oriented analysis and design. I consolidated and furthered my knowledge
                     of Unified Modeling Language and collaborated successfully with others to achieve the project goals.
                 </p>
             </div>
