--- a/app/views/content/services.ejs
+++ b/app/views/content/services.ejs
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./content/services.css">
-    <title>Document</title>
+    <title>Services Page</title>
 </head>
 <body>
     <h1><%- title %></h1>
@@ -14,9 +14,9 @@
     </div>
     <div class="services">
         <h2>Offered Services</h2>
-        <ul class="unorderedList">
-          <li>General Programming:</li>
-        </ul>
+        <h5><strong>General Programming</strong></h5>
+        <h6>Java, C#, C, PL/SQL, JavaScript</h6>
+        <h5><strong>Web Development (In progress)</strong></h5>
       </div>
 </body>
 </html>
