--- a/public/content/home.css
+++ b/public/content/home.css
@@ -1,3 +1,11 @@
+/* 
+* Filename: home.css
+* Author: Shawn Perron 
+* Student ID: 301 218 919
+* Date: 02/05/2023 
+*/
+
+
 body {
     text-align: center;
 }
