--- a/app/views/content/about.ejs
+++ b/app/views/content/about.ejs
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./content/about.css">
-    <title>Document</title>
+    <title>About Me</title>
 </head>
 
 <body>
@@ -18,6 +18,7 @@
         <p>
             I'm currently a student in the Software Engineering Technology program at Centennial College. I'm a hopeless
             dilettante interested in music, philosophy, science, and history, and why not? Information Technology.
+            I look forward to continuing my studies at the college and beyond to acquire new knowledge and skills.
         </p>
 </body>
 
