--- a/public/content/about.css
+++ b/public/content/about.css
@@ -1,3 +1,11 @@
+/* 
+* Filename: about.css
+* Author: Shawn Perron 
+* Student ID: 301 218 919
+* Date: 02/05/2023 
+*/
+
+
 .container {
     width: 600px;
     margin: 50px auto;
