--- a/public/content/app.css
+++ b/public/content/app.css
@@ -1,3 +1,11 @@
+/* 
+* Filename: app.css
+* Author: Shawn Perron 
+* Student ID: 301 218 919
+* Date: 02/05/2023 
+*/
+
+
 body {
     background-color: #DFDFDE;
 }
