--- a/public/content/projects.css
+++ b/public/content/projects.css
@@ -1,3 +1,10 @@
+/* 
+* Filename: projects.css
+* Author: Shawn Perron 
+* Student ID: 301 218 919
+* Date: 02/05/2023 
+*/
+
 * {
     box-sizing: border-box;
   }
