--- a/app/views/content/about.ejs
+++ b/app/views/content/about.ejs
@@ -15,6 +15,7 @@
         <img src="Multimedia/photos/photoMe.jpg">
     </div>
     <div class="container">
+        <h2>Shawn Perron</h2>
         <p>
             I'm currently a student in the Software Engineering Technology program at Centennial College. I'm a hopeless
             dilettante interested in music, philosophy, science, and history, and why not? Information Technology.
