Updated folder structure

--- a/app/views/content/projects.ejs
+++ b/app/views/content/projects.ejs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./content/projects.css">
+    <link rel="stylesheet" href="./content/css/projects.css">
     <title>Projects Page</title>
 </head>
 
@@ -14,7 +14,7 @@
     <div class="row">
         <div class="column">
             <h2>E-Commerce Database</h2>
-            <img class="img1" src="Multimedia/photos/databaseImage.jpg" height="200px" width="300px">
+            <img class="img1" src="multimedia/photos/databaseImage.jpg" height="200px" width="300px">
             <div class="columnText">
                 <p> As a final project for my Advanced Database Concepts course, I helped create a database for an
                     e-commerce solution. My role was to design the database schema. I also created PL/SQL sequences,
@@ -23,7 +23,7 @@
         </div>
         <div class="column">
             <h2>Programming</h2>
-            <img class="img2" src="Multimedia/photos/coding.jpg" height="200px" width="300px">
+            <img class="img2" src="multimedia/photos/coding.jpg" height="200px" width="300px">
             <div class="columnText">
                 <p>I'm currently learning several programming languages, including Java, C, C#, PL/SQL, and JavaScript.
                     I'm always eager to increase my knowledge of programming concepts and methodologies. </p>
@@ -31,7 +31,7 @@
         </div>
         <div class="column">
             <h2>Analysis and Design</h2>
-            <img class="img3" src="Multimedia/photos/modeling_techniques.png" height="200px" width="300px">
+            <img class="img3" src="multimedia/photos/modeling_techniques.png" height="200px" width="300px">
             <div class="columnText">
                 <p>I created a Software Requirements Specification for a tourist application. The
                     project centered on object-oriented analysis and design. I consolidated and furthered my knowledge
