--- a/app/views/content/about.ejs
+++ b/app/views/content/about.ejs
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./content/about.css">
+    <link rel="stylesheet" href="./content/css/about.css">
     <title>About Me</title>
 </head>
 
 <body>
     <h1><%- title %></h1>
     <div class="myPhoto">
-        <img src="Multimedia/photos/photoMe.jpg">
+        <img src="multimedia/photos/photoMe.jpg">
     </div>
     <div class="container">
         <h2>Shawn Perron</h2>
