--- a/app/views/content/home.ejs
+++ b/app/views/content/home.ejs
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./content/home.css">
+    <link rel="stylesheet" href="./content/css/home.css">
     <title>Homepage</title>
 </head>
 
 <body>
     <h1><%- title %></h1>
     <div class="customLogo">
-        <img src="Multimedia/photos/NavbarLogo.png">
+        <img src="multimedia/photos/NavbarLogo.png">
     </div>
     <div class="container">
         <p>
