--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:opsz,wght@6..96,500&family=Noto+Serif+Khojki:wght@600&family=Poppins:wght@600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./content/app.css">
+    <link rel="stylesheet" href="./content/css/app.css">
     <title>
         <%= title %>
 
