about me section content change

--- a/app/views/content/about.ejs
+++ b/app/views/content/about.ejs
@@ -18,7 +18,7 @@
         <h2>Shawn Perron</h2>
         <p>
             I'm currently a student in the Software Engineering Technology program at Centennial College. I'm a hopeless
-            dilettante interested in music, philosophy, science, and history, and why not? Information Technology.
+            dilettante interested in music, philosophy, math, science, and history, and why not? Information Technology.
             I look forward to continuing my studies at the college and beyond to acquire new knowledge and skills.
         </p>
 </body>
