--- a/app/views/partials/header.ejs
+++ b/app/views/partials/header.ejs
@@ -1,26 +1,32 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">
-      <img style="border-radius: 50%;" src="multimedia/photos/NavbarLogo.png" src="custom logo" height="100" width="100">
-      </a>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link <%= (page== 'home') ? 'active' : ''%> " aria-current="page" href="/home">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link <%= (page== 'about') ? 'active' : ''%> " aria-current="page" href="/about">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link <%= (page== 'contact') ? 'active' : ''%> " aria-current="page" href="/contact">Contact</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link <%= (page== 'projects') ? 'active' : ''%> " aria-current="page" href="/projects">Projects</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link <%= (page== 'services') ? 'active' : ''%> " aria-current="page" href="/services">Services</a>
-          </li>
-        </ul>
-      </div>
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">
+      <img style="border-radius: 50%;" src="multimedia/photos/NavbarLogo.png" src="custom logo" height="100"
+        width="100">
+    </a>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link <%= (page== 'home') ? 'active' : ''%> " aria-current="page" href="/home">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link <%= (page== 'about') ? 'active' : ''%> " aria-current="page" href="/about">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link <%= (page== 'contact') ? 'active' : ''%> " aria-current="page" href="/contact">Contact</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link <%= (page== 'projects') ? 'active' : ''%> " aria-current="page"
+            href="/projects">Projects</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link <%= (page== 'services') ? 'active' : ''%> " aria-current="page"
+            href="/services">Services</a>
+        </li> 
+        <li class="nav-item">
+          <a class="nav-link <%= (page == 'contacts/list') ? 'active' : ''%> " aria-current="page" href="/contacts-list">Contact List</a>
+        </li>  
+      </ul>
     </div>
-  </nav>
+  </div>
+</nav
