--- a/app/views/content/contacts/update.ejs
+++ b/app/views/content/contacts/update.ejs
@@ -38,11 +38,9 @@
                     </input>
                 </div>
                 <button class="btn btn-primary" type="submit">
-                    <i class="fas fa-edit"></i> Submit</button>
-                
-                    <a href="/contacts-list" class="btn btn-warning">
-                        <i class="fas fa-undo"></i> Cancel</a>
+                    <i class="fas fa-edit"></i> Delete</button>
+                    <a href="/contacts-list" class="btn btn-warning"><i class="fas fa-undo"></i> Cancel</a>
             </form>
         </div>
     </div>
-</div>
+</div> 
