Fixed update view section

--- a/app/views/content/contacts/add.ejs
+++ b/app/views/content/contacts/add.ejs
@@ -37,9 +37,9 @@
                     >
                     </input>
                 </div>
-                <button class="btn btn-primary" type="submit">
-                    <i class="fas fa-edit"></i> Delete</button>
-                    <a href="/contacts-list" class="btn btn-warning"><i class="fas fa-undo"></i> Cancel</a>
+                <button class="btn btn-primary">
+                    <i class="fas fa-edit"></i>Submit</button>
+                    <a href="/contacts-list" class="btn btn-warning"></i>Cancel</a>
             </form>
         </div>
     </div>
