--- a/app/views/content/contacts/delete.ejs
+++ b/app/views/content/contacts/delete.ejs
@@ -37,7 +37,7 @@
                     >
                     </input>
                 </div>
-                <button class="btn btn-primary">
+                <button class="btn btn-primary" style="background-color: #0F3D3E; border-color: #0F3D3E;">
                     <i class="fas fa-edit"></i>Delete</button>
                     <a href="/contacts-list" class="btn btn-warning"></i>Cancel</a>
             </form>
