--- a/app/views/content/auth/login.ejs
+++ b/app/views/content/auth/login.ejs
@@ -35,7 +35,7 @@
 
                   </div>                                        
                   <div class="text-end">
-                    <button id="loginButton" type="submit" class="btn btn-primary btn-lg">
+                    <button id="loginButton" type="submit" class="btn btn-primary btn-lg" style="background-color: #0F3D3E; border-color: #0F3D3E;">
                       <i class="fas fa-sign-in-alt"></i> Login</button>
                       <button id="cancelButton" type="reset" class="btn btn-warning btn-lg">
                         <i class="fas fa-undo"></i> Cancel</button>
